--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<h1>Eli Sabado</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptate sed, rerum unde expedita voluptatibus consequatur neque? Expedita iusto maiores magnam doloremque ipsam id, asperiores, culpa aliquid distinctio ipsum ad!</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+
+    </body>
+</html>
