Update 24 CSS DEMO

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <title>IFSC 1310 | Eli Sabado</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <a href="css-demo/index.html">CSS Demo</a>
     </body>
 </html>
