Added Project to nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="css-demo/index.html">CSS Demo</a>
+        <h1>Eli Sabado</h1>
+        <nav>
+            <ul>
+                <li><a href="prototype/index.html">First HTML Assignment</a></li>
+            </ul>
+        </nav>
+        <a href="css-demo/index.html">CSS Demo</a> 
     </body>
 </html>
