--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>University of Arkansas at Little Rock: A Brief History</title>
+    <body id="top">
     <meta charset="8" />
     <meta name="description" content="UALR History, History of the Univeristy of Arkansas at Little Rock"
 
@@ -12,11 +13,11 @@
 
 <p>The University of Arkansas at Little Rock (UA Little Rock) is a public research university in Little Rock, Arkansas. Established as Little Rock Junior College by the Little Rock School District in 1927, the institution became a private four-year university under the name Little Rock University in 1957. It returned to public status in 1969 when it merged with the University of Arkansas System under its present name. The former campus of Little Rock Junior College is now (2019) the campus of Philander Smith University.</p>
 
-<p>At 250 acres (100 ha), the UA Little Rock campus encompasses more than 56 buildings, including the Center for Nanotechnology Integrative Sciences, the Emerging Analytics Center, the Sequoyah Research Center, and the Ottenheimer Library Additionally, UA Little Rock houses special learning facilities that include a learning resource center, art galleries, KUAR public radio station,[6] University Television, and a campus-wide wireless network. It is classified among "R2: Doctoral Universities – High research activity". </p>
+<p>At 250 acres (100 ha), the UA Little Rock campus encompasses more than 56 buildings, including the Center for Nanotechnology Integrative Sciences, the Emerging Analytics Center, the Sequoyah Research Center, and the Ottenheimer Library Additionally, UA Little Rock houses special learning facilities that include a learning resource center, art galleries, KUAR public radio station,[6] University Television, and a campus-wide wireless network. It is classified among <quote>"R2: Doctoral Universities – High research activity".</quote> </p>
 
 <h2>Academics</h2>
 
-<p>The university features more than 100 undergraduate degrees and 60 graduate degrees, including graduate certificates, master's degrees, and doctorates, through both traditional and online courses.[13] Students attend classes in one of the university's three new colleges and a law school</p>
+<p>The university features more than <strong>100 undergraduate degrees and 60 graduate degrees</strong>, including graduate certificates, master's degrees, and doctorates, through both traditional and online courses.[13] Students attend classes in one of the university's three new colleges and a law school</p>
 
 <ul>
 <li>College of Business, Health, and Human Services</li>
@@ -39,7 +40,18 @@
 <li>Native American	1%</li>	
 </ul>
  
-<p>The student life at UA Little Rock is typical of public universities in the United States. It is characterized by student-run organizations and affiliation groups that support social, academic, athletic, and religious activities and interests. Some of the services offered by the UA Little Rock Office of Campus Life are intramural sports and fitness programs, diversity programs, leadership development, peer tutoring, student government association, student support programs including groups for non-traditional and first-generation students, a student-run newspaper, and fraternity and sorority life. The proximity of the UA Little Rock campus to downtown Little Rock enables students to take advantage of a wide array of recreational, entertainment, educational, internship, and employment opportunities that are not available anywhere else in Arkansas.[20]</p>
+<p>The student life at UA Little Rock is typical of public universities in the United States. It is characterized by student-run organizations and affiliation groups that support social, academic, athletic, and religious activities and interests.</p>
+
+<dl>
+    <dt>Services Offered by the Office of Campus Life</dt>
+    <dd>Intramural Sports</dd>
+    <dd>Fitness Programs</dd>
+    <dd>Diversity Programs</dd>
+    <dd>Leadership Development</dd>
+    <dd>Peer Tutoring</dd>
+    <dd>Student Government Association</dd>
+    <dd>Student Support Programs</dd>
+</dl>
 
 <h2>Campus living</h2>
 
@@ -59,16 +71,21 @@
 <li>Men's and Women's Track and Field (Indoor and Outdoor)</li>
 <li>Men's wrestling</li>
 </ol>
-<p>Two Little Rock teams that do not compete in the Sun Belt are the women's swimming and diving team (Missouri Valley Conference) and wrestling (Pac-12 Conference), neither of which the Sun Belt sponsors. Wrestling is the school's newest sport, starting in 2019, and is the first Division I program in Arkansas.</p>
+<p>Two Little Rock teams that do not compete in the Sun Belt are the women's swimming and diving team <em>(Missouri Valley Conference)</em> and wrestling <em>(Pac-12 Conference)</em>, neither of which the Sun Belt sponsors. Wrestling is the school's newest sport, starting in 2019, and is the first Division I program in Arkansas.</p>
 
 <p>Little Rock will move to the Ohio Valley Conference for the 2022-23 season.</p>
 
-Collections and archives
+<h2>Collections and archives</h2>
 
-On July 1, 2014, the UA Little Rock Collections and Archives division was created. The division encompasses:
+<p>On July 1, 2014, the UA Little Rock Collections and Archives division was created. The division encompasses: Ottenheimer Library,Center for Arkansas History and Culture, Sequoyah National Research Center.</p>
 
-<h6>Ottenheimer Library</h6>
-<h6>Center for Arkansas History and Culture</h6>
-<h6>Sequoyah National Research Center</h6>
+<h3>Links</h3>
+<ul>
+    <li><a href="https://refactored-trout-7vrq74rgw9vpfwqgp-5500.app.github.dev/">Home</a></li>
+<li><a href="https://ualr.edu" target="_blank">UALR Homepage</a> </li>
+<li><a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock">About</a></li>
+</ul>
+<h6>&copy; 2024 Eli Sabado <a href="mail to: esabado@ualr.edu">Email Link</a> <a href="#top">Back to Top</a></h6>
+
 </body>
 </html>
