--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3,17 +3,19 @@
 
 <head>
     <title>University of Arkansas at Little Rock: A Brief History</title>
-    <body id="top">
-    <meta charset="8" />
-    <meta name="description" content="UALR History, History of the Univeristy of Arkansas at Little Rock"
+    <meta charset="UTF-8" />
+    <meta name="description" content="UALR History, History of the University of Arkansas at Little Rock" />
+    <meta name="author" content="Eli Sabado" />
 
 </head>
-<body>
+
+<body id="top">
+
 <h1>University of Arkansas at Little Rock: A Brief History</h1>
 
 <p>The University of Arkansas at Little Rock (UA Little Rock) is a public research university in Little Rock, Arkansas. Established as Little Rock Junior College by the Little Rock School District in 1927, the institution became a private four-year university under the name Little Rock University in 1957. It returned to public status in 1969 when it merged with the University of Arkansas System under its present name. The former campus of Little Rock Junior College is now (2019) the campus of Philander Smith University.</p>
 
-<p>At 250 acres (100 ha), the UA Little Rock campus encompasses more than 56 buildings, including the Center for Nanotechnology Integrative Sciences, the Emerging Analytics Center, the Sequoyah Research Center, and the Ottenheimer Library Additionally, UA Little Rock houses special learning facilities that include a learning resource center, art galleries, KUAR public radio station,[6] University Television, and a campus-wide wireless network. It is classified among <quote>"R2: Doctoral Universities – High research activity".</quote> </p>
+<p>At 250 acres (100 ha), the UA Little Rock campus encompasses more than 56 buildings, including the Center for Nanotechnology Integrative Sciences, the Emerging Analytics Center, the Sequoyah Research Center, and the Ottenheimer Library Additionally, UA Little Rock houses special learning facilities that include a learning resource center, art galleries, KUAR public radio station,[6] University Television, and a campus-wide wireless network. It is classified among <blockquote>"R2: Doctoral Universities – High research activity".</blockquote> </p>
 
 <h2>Academics</h2>
 
@@ -85,7 +87,7 @@
 <li><a href="https://ualr.edu" target="_blank">UALR Homepage</a> </li>
 <li><a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock">About</a></li>
 </ul>
-<h6>&copy; 2024 Eli Sabado <a href="mail to: esabado@ualr.edu">Email Link</a> <a href="#top">Back to Top</a></h6>
+<h6>&copy; 2024 Eli Sabado <a href="mailto: esabado@ualr.edu">Email Link</a> <a href="#top">Back to Top</a></h6>
 
 </body>
 </html>
