Importance of Accessibility Update

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     </head>
     <body>
         <h1>Eli Sabado</h1>
+        <h2>Assignments</h2>
         <nav>
             <ul>
                 <li><a href="prototype/index.html">First HTML Assignment</a></li>
             </ul>
         </nav>
         <a href="css-demo/index.html">CSS Demo</a> 
+
+        <h3>Importance for Web Accessibility</h3>
+        <p>Accessibility is a key component for success on the web. There are many reasons for its importance, because what is the point of having a site if people are not able to access it at all? The first reason for making sure to have an accessible site is for more inclusivity so that people with disabilities are able to access the site and it’s more compatible to use. An example of this has been seen on some apps and sites where there’s an included alt text on an image to give a description of what is going on in the image to make it more accessible to people who potentially have a vision disability or for people who use screen readers. Another reason for good accessibility is so more types of devices can access your content. So a user can go on a page and be able to use the content designed for the cellular device, tablet, or pc. Because people use different devices to access content, this only opens the door for more users to be able to access content. There are many other important ways to be able to have an accessible site but its importance is to be able to engage more users which will benefit both the user and the administrator of the site. </p>
     </body>
 </html>
