--- a/positioning-labs/float-2.html
+++ b/positioning-labs/float-2.html
@@ -31,26 +31,35 @@
       margin-right: auto;
       margin-left: auto;
       text-shadow: 2px 2px #000;
+      display: flex;
     }
     #navy {
       background-color: #001f3f;
 	  height: 215px;
 	  width: 215px;
+    float: left;
+    margin: 5px 5px 5px 5px;
     }
     #teal {
       background-color: #39CCCC;
 	  height: 215px;
 	  width: 215px;
+    float: left;
+    margin: 5px 5px 5px 5px;
     }
     #blue {
       background-color: #0074D9;
 	  height: 215px;
 	  width: 215px;
+    float: left;
+    margin: 5px 5px 5px 5px;
     }
     #aqua {
       background-color: #7FDBFF;
 	  height: 215px;
 	  width: 215px;
+    float: left;
+    margin: 5px 5px 5px 5px;
     }
     #footer {
       background-color: #666;
