--- a/positioning-labs/float-1.html
+++ b/positioning-labs/float-1.html
@@ -31,27 +31,28 @@
       margin-right: auto;
       margin-left: auto;
       text-shadow: 2px 2px #000;
+      padding-top: 20px
     }
     #navy {
       background-color: #001f3f;
       width: 370px;
       height: 215px;
       float: left; 
-      margin: 0 10px 10px 0;
+      margin: 0 0 20px 20px;
     }
     #teal {
       background-color: #39CCCC;
 	  width: 370px;
 	  height: 215px;
 	  float: left;
-	  margin: 0 10px 10px 0;
+	  margin: 0 0 20px 20px;
     }
     #blue {
       background-color: #0074D9;
 	  width: 370px;
 	  height: 215px;
 	  float: left;
-	  margin: 0 10px 10px 0;
+	  margin: 0 0 20px 20px;
 	  
     }
     #aqua {
@@ -59,11 +60,12 @@
 	  width: 370px;
 	  height: 215px;
 	  float: left; 
-	  margin: 0 10px 10px 0;
+	  margin: 0 0 20px 20px;
     }
     #footer {
       background-color: #666;
 	  clear: both;
+    margin: 20px
 	  
     }
     h1 {
