--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <div class="container">
         <h1>Eli Sabado - IFSC 1310 Assignments</h1>
         <h2>Assignments</h2>
-        <nav>
-            <ul>
-                <li><a href="prototype/index.html">First HTML Assignment</a></li>
-            </ul>
-        </nav>
+      
         <ul>
+            <li><a href="prototype/index.html">First HTML Assignment</a></li>
             <li><a href="css-demo/index.html">CSS Demo</a></li>
+            <li>Positioning Exercises</li>
+            <ul>
             <li><a href="positioning-labs/float-1.html">Float 1</a></li>
             <li><a href="positioning-labs/float-2.html">Float 2</a></li>
             <li><a href="positioning-labs/absolute-1.html">Absolute 1</a></li>
             <li><a href="positioning-labs/absolute-2.html">Absolute 2</a></li>
-            <li><a href="assets/flexbox-froggy.img">Flexbox Froggy</a></li>
+            </ul>
+            <li><a href="flexbox-froggy-page.html">Flexbox Froggy</a></li>
+            <li><a href="corel-vector-logo.html">Corel Vector Logo</a></li>
+            <li><a href="bear-on-the-moon.html">Bear On The Moon</a></li>
         </ul>
 
         <h3>Importance for Web Accessibility</h3>
