--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="flexbox-froggy-page.html">Flexbox Froggy</a></li>
             <li><a href="corel-vector-logo.html">Corel Vector Logo</a></li>
             <li><a href="bear-on-the-moon.html">Bear On The Moon</a></li>
+            <li><a href="spacex-project/SpaceX-homepage.html">SpaceX Dragon</a></li>
         </ul>
 
         <h3>Importance for Web Accessibility</h3>
