--- a/positioning-labs/absolute-2.html
+++ b/positioning-labs/absolute-2.html
@@ -34,18 +34,42 @@
     }
     #navy {
       background-color: #001f3f;
+	  position: absolute;
+	  width: 115px;
+	  height: 115px;
+	  top:0;
+	  left:0;
     }
     #teal {
       background-color: #39CCCC;
+	  position: absolute;
+	  width: 115px;
+	  height: 115px;
+	  top: 0; 
+	  right:0;
     }
     #blue {
       background-color: #0074D9;
+	  position: absolute;
+	  width: 115px;
+	  height: 115px;
+	  bottom: 0;
+	  left: 0;
     }
     #aqua {
       background-color: #7FDBFF;
+	  position: absolute;
+	  width: 115px;
+	  height: 115px;
+	  bottom:0;
+	  right: 0;
     }
     #footer {
       background-color: #666;
+	  position: absolute;
+	  width: 115px;
+	  height: 115px;
+	  margin: 20px auto;
     }
     h1 {
       color: #000;
