--- a/positioning-labs/float-2.html
+++ b/positioning-labs/float-2.html
@@ -7,15 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Positioning Lab</title>
   <style type="text/css">
-    /* ---------------Box Sizing----------------- */
+
+/*------------Box Styling ----------------*/
+
     html {
       box-sizing: border-box;
     }
+
     *,
     *:before,
     *:after {
       box-sizing: inherit;
     }
+
     body {
       background-color: #ECECEC;
       font-weight: bold;
@@ -24,54 +28,64 @@
       text-align: center;
       line-height: 24px;
     }
+
     #wrapper {
       background-color: #FFF;
       border: 1px solid #c0c0c0;
-      width: 800px;
-      margin-right: auto;
-      margin-left: auto;
+      width: 100%;
+      margin: 0 auto;
       text-shadow: 2px 2px #000;
-      
+      min-height: 100vh;
     }
-    #navy {
-      background-color: #001f3f;
-	  height: 215px;
-	  width: 215px;
-    float: left;
-    margin: 5px 5px 5px 5px;
-    }
-    #teal {
-      background-color: #39CCCC;
-	  height: 215px;
-	  width: 215px;
-    float: left;
-    margin: 5px 5px 5px 5px;
-    }
-    #blue {
-      background-color: #0074D9;
-	  height: 215px;
-	  width: 215px;
-    float: left;
-    margin: 5px 5px 5px 5px;
-    }
-    #aqua {
-      background-color: #7FDBFF;
-	  height: 215px;
-	  width: 215px;
-    float: left;
-    margin: 5px 5px 5px 5px;
-    }
-    #footer {
-      background-color: #666;
-	  clear: both;
-    }
+
     h1 {
       color: #000;
       font-weight: normal;
       padding: 50px;
     }
+
+    #navy, #teal, #blue, #aqua {
+      float: left;
+      width: calc(25% - 20px); /* 25% of the width minus margin space */
+      height: 200px;
+      margin: 10px;
+      text-align: center;
+      line-height: 200px;
+      color: white;
+      font-size: 24px;
+      font-weight: normal;
+    }
+
+    #navy {
+      background-color: #001f3f;
+    }
+
+    #teal {
+      background-color: #39CCCC;
+    }
+
+    #blue {
+      background-color: #0074D9;
+    }
+
+    #aqua {
+      background-color: #7FDBFF;
+    }
+
+    #footer {
+      clear: both;
+      background-color: #666;
+      color: white;
+      padding: 10px 0;
+      width: 100%;
+      text-align: center;
+      font-size: 20px;
+      font-weight: normal;
+      margin-top: 20px;
+    }
   </style>
 </head>
+
 <body>
   <h1>Exercise</h1>
   <section id="wrapper">
