--- a/spacex-project/SpaceX-homepage.html
+++ b/spacex-project/SpaceX-homepage.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex">
-    <meta name="keywords" content="SpaceX, Dragon, spacecraft, private spacecraft, cargo, crew, International Space Station, NASA">
-    <meta name="author" content="Elon Musk" />
-    <title>SpaceX Dragon</title>
-    <link rel="stylesheet" href="assets-spacex/spacex-css/homepage.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="robots" content="noindex">
+        <meta name="keywords" content="SpaceX, Dragon, spacecraft, private spacecraft, cargo, crew, International Space Station, NASA">
+        <meta name="author" content="Elon Musk" />
+        <title>SpaceX Dragon</title> 
+        <link rel="stylesheet" href="assets-spacex/spacex-css/homepage.css">
+    </head>
 <body>
     <header>
+        <section id="header-box">
+        <h1>SpaceX Dragon</h1>
+        <p>First Private Spacecraft to the Space Station</p>
+        </section>
         <nav role="navigation" class="primary"> 
             <ul>
                 <li><a href="SpaceX-homepage.html">Home Page</a></li>
                 <li><a href="history-page.html">History</a></li>
                 <li><a href="faq-page.html">FAQ</a></li>
+                <li><a href="https://www.spacex.com/">SpaceX Home</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <section id="header-box">
-            <h1>SpaceX Dragon</h1>
-            <p>First Private Spacecraft to the Space Station</p>
-        </section>
-
+        
         <section id="content-box">
             <section id="overview">
                 <h2>Dragon Vehicle Overview</h2>
                 <p>Dragon is a free-flying spacecraft designed to deliver both cargo and people to orbiting destinations. Dragon made history in 2012 when it became the first commercial spacecraft in history to deliver cargo to the International Space Station and safely return cargo to Earth, a feat previously achieved only by governments. It is the only spacecraft currently flying that is capable of returning significant amounts of cargo to Earth. Currently Dragon carries cargo to space, but it was designed from the beginning to carry humans. Under an agreement with NASA, SpaceX is now developing the refinements that will enable Dragon to fly crew. Dragon's first manned test flight is expected to take place as early as 2018.</p>
+                <img src="https://c02.purpledshub.com/uploads/sites/41/2019/04/Dragon_Carousel_0007_2-0aa00b4.jpg?w=1029&webp=1" 
+                alt="SpaceX Dragon" 
+                style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px;">
             </section>
 
             <section id="configurations">
@@ -54,11 +58,15 @@
                     <li><strong>LONGEVITY</strong> - It can transport payloads, experiments, instruments, and sensors into space and back to Earth on missions ranging from one week to two years.</li>
                     <li><strong>CAPABILITIES</strong> - DragonLab can readily accommodate instrument and sensor testing, space physics and relativity experiments, radiation effects research, and many other microgravity tests.</li>
                 </ul>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Crew_Dragon_at_the_ISS_for_Demo_Mission_1_%28cropped%29.jpg/1200px-Crew_Dragon_at_the_ISS_for_Demo_Mission_1_%28cropped%29.jpg" 
+                 alt="Dragon at the ISS" 
+                 style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px;">
             </section>
         </section>
     </main>
 
     <footer>
+        <p>&copy; SpaceX 2024</p>
         <p>Contact Us: <a href="mailto:info@spacex.com">info@spacex.com</a></p>
     </footer>
 </body>
