--- a/spacex-project/history-page.html
+++ b/spacex-project/history-page.html
@@ -9,75 +9,95 @@
     <link rel="stylesheet" href="assets-spacex/spacex-css/historypage.css">
 </head>
 <body>
-    <header>
-        <h1>SpaceX Dragon - History</h1>
-    </header>
+    <div class="body-wrapper">
+        <header>
+            <section id="header-box">
+            <h1>SpaceX Dragon</h1>
+            <p>First Private Spacecraft to the Space Station</p>
+            </section>
+            <nav role="navigation" class="primary"> 
+                <ul>
+                    <li><a href="SpaceX-homepage.html">Home Page</a></li>
+                    <li><a href="history-page.html">History</a></li>
+                    <li><a href="faq-page.html">FAQ</a></li>
+                    <li><a href="https://www.spacex.com/">SpaceX Home</a></li>
+                </ul>
+            </nav>
+         </header>
 
-    <main>
-        <section id="history">
-            <h2>SpaceX Dragon Development and Milestones</h2>
-            <p>SpaceX began developing the Dragon spacecraft in late 2004, making a public announcement in 2006 with a plan of entering service in 2009. Also in 2006, SpaceX won a contract to use the Dragon spacecraft for commercially supplied resupply services to the International Space Station for the American federal space agency, NASA.</p>
+        <main>
+            <section id="history">
+                <h2>SpaceX Dragon Development and Milestones</h2>
+                <p>SpaceX began developing the Dragon spacecraft in late 2004, making a public announcement in 2006 with a plan of entering service in 2009. Also in 2006, SpaceX won a contract to use the Dragon spacecraft for commercially supplied resupply services to the International Space Station for the American federal space agency, NASA.</p>
 
-            <p>During its maiden flight in December 2010, Dragon became the first commercially built and operated spacecraft to be recovered successfully from orbit. On 25 May 2012, a cargo variant of Dragon became the first commercial spacecraft to successfully rendezvous with and attach to the International Space Station (ISS). SpaceX is contracted to deliver cargo to the ISS under NASA's Commercial Resupply Services program, and Dragon began regular cargo flights in October 2012. With the Dragon spacecraft and the Orbital ATK Cygnus, NASA seeks to increase its partnerships with domestic commercial aviation and aeronautics industry.</p>
+                <p>During its maiden flight in December 2010, Dragon became the first commercially built and operated spacecraft to be recovered successfully from orbit. On 25 May 2012, a cargo variant of Dragon became the first commercial spacecraft to successfully rendezvous with and attach to the International Space Station (ISS). SpaceX is contracted to deliver cargo to the ISS under NASA's Commercial Resupply Services program, and Dragon began regular cargo flights in October 2012. With the Dragon spacecraft and the Orbital ATK Cygnus, NASA seeks to increase its partnerships with domestic commercial aviation and aeronautics industry.</p>
 
-            <p>On 3 June 2017, the CRS-11 capsule, largely assembled from previously flown components from the CRS-4 mission in September 2014, was launched again for the first time, with the hull, structural elements, thrusters, harnesses, propellant tanks, plumbing, and many of the avionics reused. Meanwhile, the heat shield, batteries, and components exposed to seawater upon splashdown for recovery were replaced.</p>
-        </section>
+                <p>On 3 June 2017, the CRS-11 capsule, largely assembled from previously flown components from the CRS-4 mission in September 2014, was launched again for the first time, with the hull, structural elements, thrusters, harnesses, propellant tanks, plumbing, and many of the avionics reused. Meanwhile, the heat shield, batteries, and components exposed to seawater upon splashdown for recovery were replaced.</p>
+            
+                <img src="https://media.npr.org/assets/img/2019/02/28/crewdragonconcept_wide-3e58f6ba4dc2eb070add6ec94bbc9bbe10823cf6.jpg?s=1100&c=85&f=jpeg" 
+                 alt="Dragon Concept" 
+                 style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px;">
+       
 
-        <section id="recent-missions">
-            <h2>Recent Missions</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Launch Date</th>
-                        <th>Customer</th>
-                        <th>Launch Site</th>
-                        <th>Vehicle</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>9/7/2017</td>
-                        <td>U.S. AIR FORCE (OTV-5)</td>
-                        <td>CAPE CANAVERAL</td>
-                        <td>FALCON 9</td>
-                    </tr>
-                    <tr>
-                        <td>8/24/2017</td>
-                        <td>NATIONAL SPACE ORGANIZATION (TAIWAN)</td>
-                        <td>VANDENBERG</td>
-                        <td>FALCON 9</td>
-                    </tr>
-                    <tr>
-                        <td>7/5/2017</td>
-                        <td>INTELSAT</td>
-                        <td>CAPE CANAVERAL</td>
-                        <td>FALCON 9</td>
-                    </tr>
-                    <tr>
-                        <td>6/25/2017</td>
-                        <td>IRIDIUM (FLIGHT 2)</td>
-                        <td>VANDENBERG</td>
-                        <td>FALCON 9</td>
-                    </tr>
-                    <tr>
-                        <td>6/23/2017</td>
-                        <td>BULGARIASAT-1</td>
-                        <td>CAPE CANAVERAL</td>
-                        <td>FALCON 9</td>
-                    </tr>
-                    <tr>
-                        <td>6/3/2017</td>
-                        <td>NASA RESUPPLY TO ISS (FLIGHT 11)</td>
-                        <td>CAPE CANAVERAL</td>
-                        <td>DRAGON & FALCON 9</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </main>
+            </section>
 
-    <footer>
-        <p>Contact Us: <a href="mailto:info@spacex.com">info@spacex.com</a></p>
-    </footer>
+            <section id="recent-missions">
+                <h2>Recent Missions</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Launch Date</th>
+                            <th>Customer</th>
+                            <th>Launch Site</th>
+                            <th>Vehicle</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>9/7/2017</td>
+                            <td>U.S. AIR FORCE (OTV-5)</td>
+                            <td>CAPE CANAVERAL</td>
+                            <td>FALCON 9</td>
+                        </tr>
+                        <tr>
+                            <td>8/24/2017</td>
+                            <td>NATIONAL SPACE ORGANIZATION (TAIWAN)</td>
+                            <td>VANDENBERG</td>
+                            <td>FALCON 9</td>
+                        </tr>
+                        <tr>
+                            <td>7/5/2017</td>
+                            <td>INTELSAT</td>
+                            <td>CAPE CANAVERAL</td>
+                            <td>FALCON 9</td>
+                        </tr>
+                        <tr>
+                            <td>6/25/2017</td>
+                            <td>IRIDIUM (FLIGHT 2)</td>
+                            <td>VANDENBERG</td>
+                            <td>FALCON 9</td>
+                        </tr>
+                        <tr>
+                            <td>6/23/2017</td>
+                            <td>BULGARIASAT-1</td>
+                            <td>CAPE CANAVERAL</td>
+                            <td>FALCON 9</td>
+                        </tr>
+                        <tr>
+                            <td>6/3/2017</td>
+                            <td>NASA RESUPPLY TO ISS (FLIGHT 11)</td>
+                            <td>CAPE CANAVERAL</td>
+                            <td>DRAGON & FALCON 9</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; SpaceX 2024</p>
+            <p>Contact Us: <a href="mailto:info@spacex.com">info@spacex.com</a></p>
+        </footer>
+    </div>
 </body>
 </html>
